tdf#114882: don't try to close SDT when processing inner objects

Change-Id: Ib7e59e1a6c82d2d35a8466312a2571f76f2338b7
Reviewed-on: https://gerrit.libreoffice.org/47546
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>